--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
-
+.grid__row {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
+}
 
 /*# sourceMappingURL=styles.css.map */
