--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,34 @@
+.nav a {
+  text-decoration: none;
+}
+
 .grid__row {
   display: flex;
   justify-content: space-between;
   margin: auto;
   flex-direction: column;
   align-items: center;
+  width: 90%;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  list-style-type: none;
+  width: 100%;
+  border: 2px solid red;
+}
+.nav li {
+  margin-bottom: 15px;
+}
+.nav a {
+  color: #A5A5A5;
+  padding: 15px;
+}
+.nav [href="#type"] {
+  background-color: #3DF0C8;
+  color: #fff;
 }
 
 /*# sourceMappingURL=styles.css.map */
