--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,22 @@
-.nav a {
+a {
   text-decoration: none;
+}
+
+.nav {
+  display: block;
+  list-style-type: none;
+  text-align: center;
+}
+.nav a {
+  display: block;
+  padding: 15px;
+  width: 100%;
+  color: #A5A5A5;
+}
+.nav a:hover {
+  background: #3DF0C8;
+  color: #FFFFFF;
+  border-radius: 5px;
 }
 
 .grid__row {
@@ -8,27 +25,10 @@
   margin: auto;
   flex-direction: column;
   align-items: center;
-  width: 90%;
 }
 
-.nav {
-  display: flex;
-  justify-content: space-between;
-  margin: auto;
-  list-style-type: none;
-  width: 100%;
-  border: 2px solid red;
-}
-.nav li {
-  margin-bottom: 15px;
-}
-.nav a {
-  color: #A5A5A5;
-  padding: 15px;
-}
-.nav [href="#type"] {
-  background-color: #3DF0C8;
-  color: #fff;
+.grid__col--9 {
+  width: 90%;
 }
 
 /*# sourceMappingURL=styles.css.map */
