--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -10,7 +10,7 @@ $font-stack: 'Asap', sans-serif;
 $desktop-view: '(min-width: 768px)';
 
 // colors
-$white: #fff; // text for buttons, nav element
+$white: #FFFFFF; // text for buttons, nav element
 $text-primary: #A5A5A5; // page text, text inside grid and nav elements
 
 // headline, nav, quote color
