--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,19 @@ a {
   border-radius: 5px;
 }
 
+* {
+  box-sizing: border-box;
+  font-family: "Asap", sans-serif;
+}
+
+ul {
+  padding: 0;
+}
+
+p {
+  color: #A5A5A5;
+}
+
 .grid__row {
   display: flex;
   justify-content: space-between;
