--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -6,7 +6,10 @@
   @include flex-box;
   flex-direction: column;
   align-items: center;
-  // width: 90%;
+  width: 90%;
+  a {
+    @extend %link;
+  }
 }
 
 // grid row colors
