--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -10,6 +10,19 @@
   @extend %nav;
 }
 
-a {
-  @extend %link;
-}
+// .nav a {
+//     @extend %link;
+//     display: block;
+//     padding: 15px;
+//     width: 100%;
+//     color: $text-primary;
+//     &:hover {
+//       background: $headline-primary;
+//       color: $white;
+//       border-radius: 5px;
+//   }
+// }
+
+// .nav a {
+//   @extend %link;
+// }
