--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -11,3 +11,14 @@
   padding: 15px;
   margin-bottom: 10px;
 }
+
+// .img {
+//   &--avatar {
+//     @extend %image;
+//   }
+//   &--frame {
+//     border: 1px solid $text-primary;
+//     padding: 15px;
+//     margin-bottom: 10px;
+//   }
+// }
