--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -2,25 +2,31 @@
 // BUTTON STYLES
 // =====================================
 
-.grid__col--12 {
-  width: 100%;
-  & .theme__colors {
-    display: block;
-    width: 100%;
-    text-transform: capitalize;
-    font-size: 1.3em;
-    color: $white;
-    border: none;
-    padding: 8px;
-    border-radius: 5px;
+
+.btn {
+
+  &--default {
+    @extend %btn;
+    background: $text-secondary;
   }
-}
 
-// .theme__colors {
-//   display: block;
-//   width: 100%;
-// }
+  &--success {
+    @extend %btn;
+    background: $btn-success;
+  }
 
-.btn--success {
-  background: $btn-success;
+  &--error {
+    @extend %btn;
+    background: $btn-error;
+  }
+
+  &--warning {
+    @extend %btn;
+    background: $btn-warning;
+  }
+
+  &--info {
+    @extend %btn;
+    background: $btn-info;
+    }
 }
