--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -9,6 +9,8 @@
   display: flex;
   justify-content: space-between;
   margin: auto;
+  width: 90%;
+  flex-direction: column;
 }
 
 // Media query mixin
