--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -11,7 +11,8 @@ $desktop-view: '(min-width: 768px)';
 
 // colors
 $white: #FFFFFF; // text for buttons, nav element
-$text-primary: #A5A5A5; // page text, text inside grid and nav elements
+$text-primary: #A5A5A5; // page text, text inside nav elements
+$text-grid: #797979; // text inside grids
 
 // headline, nav, quote color
 $headline-primary: #3DF0C8; // aqua
@@ -28,7 +29,7 @@ $btn-info: #836DB1; // purple
 
 // grid colors
 $grid-12: #82D2BE;
-$grid-6: #4294C0;
+$grid-6: #3495B0;
 $grid-4: #78DBF0;
 $grid-3: #E0ACEF;
 $grid-5: #85DE94;
