--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -4,16 +4,15 @@
 
 .form {
   @include flex-box;
-  width: 50%;
-  & .headline--secondary {
-    margin-left: auto;
-  }
+  width: 100%;
   & .form__label--hidden {
     display: none;
   }
   & .form__input {
+    width: 95%;
+    align-self: center;
     border: none;
-    border-bottom: 4px solid $headline-primary;
-    margin: 1.5em 0;
+    border-bottom: 5px solid $headline-primary;
+    margin: 25px 0;
   }
 }
