--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@
 .grid__col--8.theme__colors, .grid__col--7.theme__colors, .grid__col--5.theme__colors, .grid__col--3.theme__colors, .grid__col--4.theme__colors, .grid__col--6.theme__colors, .grid__col--12.theme__colors {
   padding: 12px;
   border-radius: 5px;
-  margin: 5px 0;
+  margin: 3px 0;
   color: #797979;
 }
 
@@ -447,7 +447,7 @@ p {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  margin-bottom: 50px;
+  margin-bottom: 45px;
 }
 .grid__col--12 {
   display: flex;
@@ -521,13 +521,20 @@ p {
 }
 
 .headline--primary {
-  width: 60%;
-  margin-left: 20px;
+  width: 80%;
+  margin-left: 40px;
 }
 
 .headline--secondary {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  width: 90%;
+  flex-direction: column;
   color: #A5A5A5;
   font-weight: normal;
+  padding-top: 1.1em;
+  padding-bottom: 1.4em;
 }
 
 .card .link {
@@ -542,6 +549,7 @@ p {
   font-style: italic;
   padding-left: 10px;
   border-left: 6px solid #3DF0C8;
+  margin-bottom: 60px;
 }
 
 .grid__col--9 {
@@ -556,7 +564,7 @@ p {
 .img--frame {
   border: 1px solid #A5A5A5;
   padding: 15px;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
 }
 
 .btn--default {
@@ -590,8 +598,12 @@ p {
   width: 95%;
   align-self: center;
   border: none;
-  border-bottom: 5px solid #3DF0C8;
-  margin: 25px 0;
+  border-bottom: 7px solid #3DF0C8;
+  margin: 35px 0;
+}
+.form .form__input::placeholder {
+  padding: 10px;
+  font-size: 0.9em;
 }
 
 /*# sourceMappingURL=styles.css.map */
