desktop nav (fix)

--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -11,6 +11,9 @@
     display: flex;
     margin: auto;
     padding: 10px 0;
+    @include desktop(large) {
+      display: inline-block;
+    }
   }
   &--frame {
     border: 1px solid $text-primary;
