--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -7,7 +7,7 @@
 $font-stack: 'Asap', sans-serif;
 
 // Media query breakpoints
-$desktop-view: '(min-width: 768px)';
+$desktop: 768px;
 
 // colors
 $white: #FFFFFF; // text for buttons, nav element
