--- a/css/styles.css
+++ b/css/styles.css
@@ -18,21 +18,9 @@
   color: #D4D7D6;
 }
 
-.nav {
-  display: block;
+.nav__item {
   list-style-type: none;
   text-align: center;
-}
-.nav a {
-  display: block;
-  padding: 15px;
-  width: 100%;
-  color: #A5A5A5;
-}
-.nav a:hover {
-  background: #3DF0C8;
-  color: #FFFFFF;
-  border-radius: 5px;
 }
 
 .btn--info, .btn--warning, .btn--error, .btn--success, .btn--default {
@@ -556,10 +544,40 @@ p {
   width: 90%;
 }
 
+@media (min-width: 768px) {
+  .nav {
+    position: absolute;
+    display: inline-block;
+    width: 100%;
+    text-align: right;
+  }
+}
+@media (min-width: 768px) {
+  .nav__item {
+    display: inline-block;
+  }
+}
+.nav__item a {
+  display: block;
+  padding: 15px;
+  width: 100%;
+  color: #A5A5A5;
+}
+.nav__item a:hover {
+  background: #3DF0C8;
+  color: #FFFFFF;
+  border-radius: 5px;
+}
+
 .img--logo {
   display: flex;
   margin: auto;
   padding: 10px 0;
+}
+@media (min-width: 768px) {
+  .img--logo {
+    display: inline-block;
+  }
 }
 .img--frame {
   border: 1px solid #A5A5A5;
