--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,7 @@
+// ===============================================
+// BASE ELEMENT STYLES
+// ===============================================
+
 * {
   box-sizing: border-box;
   font-family: $font-stack;
