--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -4,29 +4,24 @@
 
 
 .btn {
-
+  @include bg-colors($btn-colors);
   &--default {
     @extend %btn;
-    background: $text-secondary;
   }
 
   &--success {
     @extend %btn;
-    background: $btn-success;
   }
 
   &--error {
     @extend %btn;
-    background: $btn-error;
   }
 
   &--warning {
     @extend %btn;
-    background: $btn-warning;
   }
 
   &--info {
     @extend %btn;
-    background: $btn-info;
     }
 }
