--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -27,6 +27,15 @@ $btn-error: #E76D6D; // rose
 $btn-warning: #DA6743; // red
 $btn-info: #836DB1; // purple
 
+// color map
+$btn-colors: (
+  default: $text-secondary,
+  success: $btn-success,
+  error: $btn-error,
+  warning: $btn-warning,
+  info: $btn-info,
+);
+
 // grid colors
 $grid-12: #82D2BE;
 $grid-6: #3495B0;
