--- a/scss/utilities/_extends.scss
+++ b/scss/utilities/_extends.scss
@@ -46,7 +46,7 @@
 // basic button styles
 %btn {
   width: 100%;
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-size: 1.3em;
   color: $white;
   border: none;
