--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -27,7 +27,7 @@ $btn-error: #E76D6D; // rose
 $btn-warning: #DA6743; // red
 $btn-info: #836DB1; // purple
 
-// color map
+// color map for buttons
 $btn-colors: (
   default: $text-secondary,
   success: $btn-success,
