--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@
 
 .btn--info, .btn--warning, .btn--error, .btn--success, .btn--default {
   width: 100%;
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-size: 1.3em;
   color: #FFFFFF;
   border: none;
@@ -426,16 +426,28 @@ p {
   line-height: 1.5;
 }
 
+.container {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  width: 90%;
+  flex-direction: column;
+}
+
 .grid__row {
   display: flex;
   justify-content: space-between;
   margin: auto;
   width: 90%;
   flex-direction: column;
-  flex-direction: column;
   align-items: center;
   width: 100%;
   margin-bottom: 45px;
+}
+@media (min-width: 768px) {
+  .grid__row {
+    flex-direction: row;
+  }
 }
 .grid__col--12 {
   display: flex;
@@ -544,14 +556,6 @@ p {
   width: 90%;
 }
 
-@media (min-width: 768px) {
-  .nav {
-    position: absolute;
-    display: inline-block;
-    width: 100%;
-    text-align: right;
-  }
-}
 @media (min-width: 768px) {
   .nav__item {
     display: inline-block;
