--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -3,12 +3,21 @@
 // ====================================
 
 .form {
+  @include med-qry(med) {
+    width: 90%;
+  }
+
   @include flex-box;
   width: 100%;
   & .form__label--hidden {
     display: none;
   }
   & .form__input {
+
+    @include med-qry(med) {
+      width: 85%;
+    }
+
     width: 95%;
     align-self: center;
     border: none;
