--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -11,7 +11,7 @@
     display: flex;
     margin: auto;
     padding: 10px 0;
-    @include desktop(large) {
+    @include med-qry(med) {
       display: inline-block;
     }
   }
