--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -4,38 +4,16 @@
 
 .grid__col--9 {
   width: 90%;
-  // @include desktop(large) {
-  //   border: 2px dashed blue;
-  //   flex-direction: row;
-  //   flex-wrap: wrap;
-  //   width: 50%;
-  // }
-}
-
-.grid__col--3 {
-  // @include desktop(large) {
-  //   border: 2px solid yellow;
-  //   flex-direction: row;
-  //   width: 50%;
-  //   align-self: flex-end;
-  // }
 }
 
 .nav {
-  // @include desktop(large) {
-  //   display: flex;
-  //   flex-direction: row;
-    // width: 100%;
-    // text-align: right;
-    // border: 2px solid pink;
-    // width: 50%;
-  //}
+  @include med-qry(med) {
+    display: flex;
+    margin: auto;
+  }
 
   &__item {
     @extend %nav;
-    @include desktop(large) {
-      display: inline-block;
-    }
     a {
       display: block;
       padding: 15px;
