--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -7,7 +7,8 @@
 $font-stack: 'Asap', sans-serif;
 
 // Media query breakpoints
-$desktop: 768px;
+$desktop: 990px;
+$tablet: 768px;
 
 // colors
 $white: #FFFFFF; // text for buttons, nav element
