--- a/css/styles.css
+++ b/css/styles.css
@@ -594,6 +594,13 @@ p {
   padding: 15px;
   margin-bottom: 40px;
 }
+@media (min-width: 768px) {
+  .img--frame {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 
 .btn--default {
   background-color: #69E1FC;
